--- a/saitae-web/src/main/webapp/pages/perfil.xhtml
+++ b/saitae-web/src/main/webapp/pages/perfil.xhtml
@@ -18,9 +18,9 @@
                     }
                 </style>
                 <h:form id="form">
-                    <p:carousel id="carousel" value="#{anuncioController.individual}" 
+                    <p:carousel id="carousel" value="#{perfilController.individual}" 
                                 headerText="Anuncios" var="ann" circular="true" 
-                                footerText="Total de anuncios: #{anuncioController.individual.size()}." 
+                                footerText="Total de anuncios: #{perfilController.individual.size()}." 
                                 numVisible="1" itemStyle="text-align:center" autoPlayInterval="30000">
                         <p:panelGrid columns="1" style="width:100%;margin:10px 0px" 
                                      columnClasses="label,value" layout="grid" 
