--- a/saitae-web/src/main/webapp/pages/solicitudR.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudR.xhtml
@@ -120,7 +120,8 @@
                             <p:datePicker id="fec" value="#{reservaSController.fecha}" 
                                           hourFormat="12" immediate="true" locale="es"
                                           monthNavigator="true" showIcon="true" size="30" 
-                                          placeholder="Seleccione la fecha" showButtonBar="true">
+                                          placeholder="Seleccione la fecha" showButtonBar="true"
+                                          disabledDays="#{reservaSController.invalidDays}">
                                 <p:ajax event="dateSelect" listener="#{reservaSController.fechaSelect}"/>
                                 <p:ajax event="change" listener="#{reservaSController.horasSelect}"/>
                             </p:datePicker>
@@ -219,7 +220,8 @@
                             <p:datePicker id="fecl" value="#{reservaSController.fecha}" 
                                           locale="es" pattern="EEE dd/MMM/yyyy"
                                           monthNavigator="true" showIcon="true" size="30" 
-                                          placeholder="Seleccione la fecha">
+                                          placeholder="Seleccione la fecha"
+                                          disabledDays="#{reservaSController.invalidDays}">
                                 <p:ajax event="dateSelect" listener="#{reservaSController.fechaSelect}"/>
                                 <p:ajax event="change" listener="#{reservaSController.horasSelect}"/>
                             </p:datePicker>
@@ -356,12 +358,13 @@
                                     update="pp libros event"/>
                         </p:selectOneMenu>
 
-                        <p:outputLabel for="feci" value="Fecha en la que usará el libro: "/>
-                        <p:datePicker id="feci" value="#{reservaSController.fecha}" 
+                        <p:outputLabel for="f" value="Fecha en la que usará el libro: "/>
+                        <p:datePicker id="f" value="#{reservaSController.fecha}" 
                                       locale="es" pattern="EEE dd/MMM/yyyy"
                                       monthNavigator="true" showIcon="true" size="30" 
-                                      placeholder="Seleccione la fecha">
-                            <p:ajax event="dateSelect" listener="#{reservaSController.onBlur}"/>
+                                      placeholder="Seleccione la fecha"
+                                      disabledDays="#{reservaSController.invalidDays}">
+                            <p:ajax event="dateSelect" listener="#{reservaSController.fechaSelect}"/>
                             <p:ajax event="change" listener="#{reservaSController.onBlur}"/>
                         </p:datePicker>
 
@@ -378,7 +381,8 @@
                         <p:datePicker id="fecf" value="#{reservaSController.fechaf}" 
                                       locale="es" pattern="EEE dd/MMM/yyyy"
                                       monthNavigator="true" showIcon="true" size="30" 
-                                      placeholder="Seleccione la fecha">
+                                      placeholder="Seleccione la fecha"
+                                      disabledDays="#{reservaSController.invalidDays}">
                             <p:ajax event="dateSelect" listener="#{reservaSController.onBlur}"/>
                             <p:ajax event="change" listener="#{reservaSController.onBlur}"/>
                         </p:datePicker>
@@ -443,6 +447,8 @@
                                                  action="#{reservaSController.agregarLibroLista()}"
                                                  rendered="#{reservaSController.mst}"
                                                  update="pp libros" widgetVar="btag"/>
+                                <h:outputText id="ppl" rendered="#{reservaSController.verTexto}"
+                                    value="Éste libro no se puede reservar en el tipo de reserva que ha elegido."/>
                             </h:panelGrid>
                         </p:panel>
 
