corrección de errores en la administración de recursoso iniciada

--- a/saitae-web/src/main/webapp/pages/tipopp.xhtml
+++ b/saitae-web/src/main/webapp/pages/tipopp.xhtml
@@ -30,7 +30,8 @@
                     <h1 style="align-content: center;">Administración.</h1>
                     <p:tabView id="tw" orientation="left" dynamic="true" style="height: 100%; width: 90%;">
                         <p:tab title="Zonas">
-                            <p:dataTable id="zona" var="z" value="#{tipoController.zonas}" editable="true" 
+                            <p:dataTable id="zona" var="z" value="#{tipoController.zonas}" 
+                                         editable="true" 
                                          widgetVar="zona1" styleClass="tabla"
                                          emptyMessage="Sin registros aún.">
                                 <f:facet name="header">
